--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ bin/
 .classpath
 .project
 .settings/
+.checkstyle
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
